--- a/src/components/Quote.module.css
+++ b/src/components/Quote.module.css
@@ -1,12 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
 
 .quote {
-  display: block;
   color: #34495e;
   font-family: 'Open Sans', sans-serif;
 }
 
 .quote h2 {
+  display: block;
+  text-align: justify;
   margin: 2rem 2rem 0 2rem;
   font-size: 2rem;
 }
@@ -24,7 +25,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem;
+  padding: 0 1rem 1rem 1rem;
 }
 
 .bottom-bar button {
