--- a/src/components/Quote.module.css
+++ b/src/components/Quote.module.css
@@ -6,8 +6,8 @@
 }
 
 .quote h2 {
-  display: block;
-  text-align: justify;
+  display: flex;
+  text-align: left;
   margin: 2rem 2rem 0 2rem;
   font-size: 2rem;
 }
